# BeatSaverPlusPlus

./: CMakeLists.txt  README.md  mod.template.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml
include/: Utils.hpp  logging.hpp
scripts/: build.ps1  copy.ps1
shared/: BeatSaver.hpp  Exceptions.hpp  _config.h  macros.hpp
shared/Models/: Beatmap.hpp  BeatmapDifficulty.hpp  BeatmapParitySummary.hpp  BeatmapVersion.hpp  BeatmapWithOrder.hpp  Metadata.hpp  Page.hpp  Playlist.hpp  PlaylistPage.hpp  PlaylistSearchPage.hpp  PlaylistStats.hpp  SearchPage.hpp  Serde.hpp  Stats.hpp  UserDetail.hpp  UserDiffStats.hpp  UserStats.hpp  VoteSummary.hpp
src/: BeatSaver.cpp  Exceptions.cpp  Utils.cpp
src/Models/: BeatmapVersion.cpp  UserDetail.cpp
